--- a/quiz/index.html
+++ b/quiz/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap Quiz</title>
+    <title>Asareware Quiz</title>
+    <!-- Load Bootstrap 5 styles from the CDN for the quiz layout -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -13,6 +14,7 @@
   </head>
   <body class="bg-light">
     <main class="container py-5">
+      <!-- Hero area introducing the quiz -->
       <header class="mb-4 text-center">
         <h1 class="fw-bold">Asareware Quiz</h1>
         <p class="text-muted mb-0">
@@ -20,6 +22,7 @@
         </p>
       </header>
 
+      <!-- Quiz form that uses Bootstrap validation helpers -->
       <form id="quizForm" class="needs-validation" novalidate>
         <div class="row g-4">
           <div class="col-12 col-lg-6">
@@ -128,48 +131,19 @@
         </div>
       </form>
 
+      <!-- Area for feedback plus an optional reset button -->
       <div id="result" class="alert alert-info mt-4 d-none" role="alert"></div>
+      <div class="text-center">
+        <button id="resetQuiz" class="btn btn-outline-secondary d-none">Retake Quiz</button>
+      </div>
     </main>
 
+    <!-- Bootstrap bundle provides JS helpers such as validation styles -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <script>
-      (() => {
-        const answerKey = {
-          q1: "b",
-          q2: "b",
-          q3: "a",
-          q4: "b",
-          q5: "a",
-        };
-
-        const form = document.getElementById("quizForm");
-        const resultBox = document.getElementById("result");
-
-        form.addEventListener("submit", (event) => {
-          event.preventDefault();
-
-          if (!form.checkValidity()) {
-            form.classList.add("was-validated");
-            return;
-          }
-
-          const formData = new FormData(form);
-          let score = 0;
-
-          for (const [question, answer] of Object.entries(answerKey)) {
-            if (formData.get(question) === answer) {
-              score += 1;
-            }
-          }
-
-          resultBox.textContent = `You scored ${score} out of ${Object.keys(answerKey).length}.`;
-          resultBox.classList.remove("d-none");
-        });
-      })();
-    </script>
+    <script src="./app.js"></script>
   </body>
 </html>
