--- a/quiz/index.html
+++ b/quiz/index.html
@@ -22,22 +22,28 @@
         </p>
       </header>
 
+      <!-- Result + reset controls stay near the top for quick feedback -->
+      <div id="result" class="alert alert-info d-none" role="alert"></div>
+      <div class="text-center mb-4">
+        <button type="button" id="resetQuiz" class="btn btn-outline-secondary d-none">Retake Quiz</button>
+      </div>
+
       <!-- Quiz form that uses Bootstrap validation helpers -->
       <form id="quizForm" class="needs-validation" novalidate>
-        <div class="row g-4">
-          <div class="col-12 col-lg-6">
-            <article class="card h-100 shadow-sm">
+        <div id="questionGrid" class="row g-4">
+          <div class="col-12 col-lg-6 question-item">
+            <article class="card h-100 shadow-sm question-card">
               <div class="card-body">
                 <h2 class="h5">1. What does Bootstrap primarily provide?</h2>
-                <div class="form-check mt-3">
+                <div class="form-check mt-3 answer-option">
                   <input class="form-check-input" type="radio" name="q1" value="a" id="q1a" required />
                   <label class="form-check-label" for="q1a">Server-side rendering utilities</label>
                 </div>
-                <div class="form-check">
+                <div class="form-check answer-option">
                   <input class="form-check-input" type="radio" name="q1" value="b" id="q1b" />
                   <label class="form-check-label" for="q1b">Responsive HTML/CSS components</label>
                 </div>
-                <div class="form-check">
+                <div class="form-check answer-option">
                   <input class="form-check-input" type="radio" name="q1" value="c" id="q1c" />
                   <label class="form-check-label" for="q1c">Database migration tools</label>
                 </div>
@@ -45,19 +51,19 @@
             </article>
           </div>
 
-          <div class="col-12 col-lg-6">
-            <article class="card h-100 shadow-sm">
+          <div class="col-12 col-lg-6 question-item">
+            <article class="card h-100 shadow-sm question-card">
               <div class="card-body">
                 <h2 class="h5">2. Which class gives you a responsive grid container?</h2>
-                <div class="form-check mt-3">
+                <div class="form-check mt-3 answer-option">
                   <input class="form-check-input" type="radio" name="q2" value="a" id="q2a" required />
                   <label class="form-check-label" for="q2a">`.grid-responsive`</label>
                 </div>
-                <div class="form-check">
+                <div class="form-check answer-option">
                   <input class="form-check-input" type="radio" name="q2" value="b" id="q2b" />
                   <label class="form-check-label" for="q2b">`.container`</label>
                 </div>
-                <div class="form-check">
+                <div class="form-check answer-option">
                   <input class="form-check-input" type="radio" name="q2" value="c" id="q2c" />
                   <label class="form-check-label" for="q2c">`.row-flex`</label>
                 </div>
@@ -65,19 +71,19 @@
             </article>
           </div>
 
-          <div class="col-12 col-lg-6">
-            <article class="card h-100 shadow-sm">
+          <div class="col-12 col-lg-6 question-item">
+            <article class="card h-100 shadow-sm question-card">
               <div class="card-body">
                 <h2 class="h5">3. Which component is built in for highlighting alerts?</h2>
-                <div class="form-check mt-3">
+                <div class="form-check mt-3 answer-option">
                   <input class="form-check-input" type="radio" name="q3" value="a" id="q3a" required />
                   <label class="form-check-label" for="q3a">`alert`</label>
                 </div>
-                <div class="form-check">
+                <div class="form-check answer-option">
                   <input class="form-check-input" type="radio" name="q3" value="b" id="q3b" />
                   <label class="form-check-label" for="q3b">`notification-banner`</label>
                 </div>
-                <div class="form-check">
+                <div class="form-check answer-option">
                   <input class="form-check-input" type="radio" name="q3" value="c" id="q3c" />
                   <label class="form-check-label" for="q3c">`warn-box`</label>
                 </div>
@@ -85,19 +91,19 @@
             </article>
           </div>
 
-          <div class="col-12 col-lg-6">
-            <article class="card h-100 shadow-sm">
+          <div class="col-12 col-lg-6 question-item">
+            <article class="card h-100 shadow-sm question-card">
               <div class="card-body">
                 <h2 class="h5">4. Which breakpoint starts at 992px by default?</h2>
-                <div class="form-check mt-3">
+                <div class="form-check mt-3 answer-option">
                   <input class="form-check-input" type="radio" name="q4" value="a" id="q4a" required />
                   <label class="form-check-label" for="q4a">`md`</label>
                 </div>
-                <div class="form-check">
+                <div class="form-check answer-option">
                   <input class="form-check-input" type="radio" name="q4" value="b" id="q4b" />
                   <label class="form-check-label" for="q4b">`lg`</label>
                 </div>
-                <div class="form-check">
+                <div class="form-check answer-option">
                   <input class="form-check-input" type="radio" name="q4" value="c" id="q4c" />
                   <label class="form-check-label" for="q4c">`xl`</label>
                 </div>
@@ -105,19 +111,19 @@
             </article>
           </div>
 
-          <div class="col-12">
-            <article class="card h-100 shadow-sm">
+          <div class="col-12 question-item">
+            <article class="card h-100 shadow-sm question-card">
               <div class="card-body">
                 <h2 class="h5">5. Which class adds Bootstrap’s default button styling?</h2>
-                <div class="form-check mt-3">
+                <div class="form-check mt-3 answer-option">
                   <input class="form-check-input" type="radio" name="q5" value="a" id="q5a" required />
                   <label class="form-check-label" for="q5a">`btn btn-primary`</label>
                 </div>
-                <div class="form-check">
+                <div class="form-check answer-option">
                   <input class="form-check-input" type="radio" name="q5" value="b" id="q5b" />
                   <label class="form-check-label" for="q5b">`button-main`</label>
                 </div>
-                <div class="form-check">
+                <div class="form-check answer-option">
                   <input class="form-check-input" type="radio" name="q5" value="c" id="q5c" />
                   <label class="form-check-label" for="q5c">`action-button`</label>
                 </div>
@@ -131,11 +137,6 @@
         </div>
       </form>
 
-      <!-- Area for feedback plus an optional reset button -->
-      <div id="result" class="alert alert-info mt-4 d-none" role="alert"></div>
-      <div class="text-center">
-        <button id="resetQuiz" class="btn btn-outline-secondary d-none">Retake Quiz</button>
-      </div>
     </main>
 
     <!-- Bootstrap bundle provides JS helpers such as validation styles -->
